@@ -1,5 +1,10 @@
 2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
 
+	* autogen.sh: Add useful warning when gnome-autogen.sh
+	couldn't be found.
+
+2006-11-10  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
+
 	* src/ephy-lockdown.c: (update_window):
 	Also disable the "Open Image" context menu action if the
 	desktop wide "disable save to disk" lockdown key is
